fixs graph